--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
           alt="Settings"
         />
       </div>
-      <h1 id="time"></h1>
-      <h2 id="date"></h2>
+      <h1 id="time">...</h1>
+      <h2 id="date">...</h2>
       <div id="question-container">
-        <div id="topic"></div>
-        <h3 id="question"></h3>
+        <div style="display: flex; align-items: center">
+          <img
+            src="./icon48.png"
+            style="height: 40px; display: block"
+            alt="InterviewBit"
+          />
+          <div id="topic"></div>
+        </div>
+        <h3 id="question">...</h3>
         <div id="answer" class="blurred"></div>
       </div>
       <div id="settings-modal">
