refactor: restructure files and assets

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InterviewBit Question Viewer</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="icon-container">
         <img
-          src="reload.svg"
+          src="./assets/reload.svg"
           id="refresh-icon"
           class="icon"
           alt="Refresh"
           aria-label="Refresh question"
         />
         <img
-          src="settings.svg"
+          src="./assets/settings.svg"
           id="settings-icon"
           class="icon"
           alt="Settings"
@@ -27,7 +27,7 @@
       <h2 id="date">...</h2>
       <div id="question-container">
         <div class="flex-center">
-          <img src="./icon48.png" class="icon-img" alt="InterviewBit" />
+          <img src="./assets/icon48.png" class="icon-img" alt="InterviewBit" />
           <div id="topic"></div>
         </div>
         <h3 id="question"><a href="#" target="_blank">...</a></h3>
@@ -64,6 +64,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
