fix: open link in the same tab

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img src="./assets/icon48.png" class="icon-img" alt="InterviewBit" />
           <div id="topic"></div>
         </div>
-        <h3 id="question"><a href="#" target="_blank">...</a></h3>
+        <h3 id="question"><a href="#">...</a></h3>
         <div id="answer" class="blurred"></div>
       </div>
       <div id="add-custom-topic-modal" class="modal">
